--- a/main.tex
+++ b/main.tex
@@ -16,9 +16,10 @@
 %always write abstract last!    
 \end{abstract}
 
+\tableofcontents
 
 \chapter{Introduction}
-%“Maritime Cyber Security Analysis – How to Reduce Threats?” names the following five areas susceptible to cyber attacks: Navigation Bridge, Power Management Systems, Engine Room, Cargo Handling Equipment, and Administrative and Communicational Systems[1]. This report looks to analyze each of the areas and highlight possible areas of vulnerability for attack.
+%“Maritime Cyber Security Analysis – How to Reduce Threats?” names the following five areas susceptible to cyber attacks: Navigation Bridge, Power Management Systems, Engine Room, Cargo Handling Equipment, and Administrative and Communicational Systems[1].
 
 With the introduction of technologies such as Automated Information Systems (AIS) that have become mandatory on board certain ships, shipboard systems have become increasingly inter-connected. In order to properly analyze the security implications of shipboard systems, it is crucial to have an in depth understanding of ship data network standards and in what ways these technologies will proceed in the future. This report will include a comprehensive analysis on the different communication standards that are used to connect devices within an on-board ship network, as well as providing some context to the architecture of shipboard networks. While this will be challenging as history has shown a lack of standards 
 
@@ -26,10 +27,14 @@ Once questions concerning how ship networks are typically configured, as well as
 
  
 \chapter{Networking History}
-The story of shipboard network standards is one comprising of organizations publishing standards with low adoption rates, and manufacturers controlling device compatibility, as they continue to do today.
+The story of shipboard network standards is one comprising of organizations publishing standards plagued with low adoption rates and manufacturers controlling device compatibility, as they continue to do today. (more on this)
 
-\section{Past Networking Standards}
-\section {}
+\section {MITS}
+The Maritime Information Technology Standard was first published by a Norwegian research team during 1991 and 1993. This standard looked to comply with a trend that saw all vital systems beginning to interface with one another to form an integrated system. Their main goal through the MITS integrated control and open systems standard was to make better systems that are both more secure, and make the lives of operators easier. 
+
+The design philosophy of MITS researchers during this time was to choose standards that have already been established like TCP/IP, and to select low level protocols for communication protocols in lieu of high level ones. 
+
+"It used a single, non-redundant Ethernet on the physical layer and the IP protocols, mainly TCP/IP on the transport layer."
 
 \chapter{Currently Used Standards}
 \section{NMEA}
@@ -73,10 +78,7 @@ stuff goes here!
 
 \section{Integrated Bridge Systems and ECDIS}
 
-With on-board ECDIS workstations being one of the main convergent points in the network of systems and sensors, ECDIS has been crucial part in understanding the network layouts on vessels using ECDIS solutions by common manufacturers. There are several different methods manufacturers are employing their networks, one of which is simply connecting the sensors directly to a main processing workstation, using the single talker, multiple listener IEC 61162-1/2 (NMEA 0183) standard, or other serial communications protocols like Modbus. Each of the ECDIS solutions offered by the Furuno, Transas, and the Maris ECDIS900 employ this method, where external devices and sensors such as AIS, GPS, Alarm Systems, and gyroscopes are connected directly to the processing unit, and additional sensors are connected to a serial to LAN adaptor that is either connected directly to the processing unit or to a switching hub as shown in Figure 3.2. Support for numerous sensor adaptors () for redundancy.
-
-(Picture I've made of the network diagram for simple ecdis system)
-[6][7]
+With on-board ECDIS workstations being one of the main convergent points in the network of systems and sensors, ECDIS has been crucial part in understanding the network layouts on vessels using ECDIS solutions by common manufacturers. There are several different methods manufacturers are employing their networks, one of which is simply connecting the sensors directly to a main processing workstation, using the single talker, multiple listener IEC 61162-1/2 (NMEA 0183) standard, or other serial communications protocols like Modbus. Each of the ECDIS solutions offered by the Furuno, Transas, and the Maris ECDIS900 employ this method, where external devices and sensors such as AIS, GPS, Alarm Systems, and gyroscopes are connected directly to the processing unit, and additional sensors are connected to a serial to LAN adaptor that is either connected directly to the processing unit or to a switching hub as shown in Figure 4.2. Support for numerous sensor adaptors (16) for redundancy.[6][7]
 
 \begin{figure}[h]
     \centering
@@ -99,29 +101,12 @@ An alternate configuration exists in which other manufacturers opt to use the NM
 \end{figure}
 
 
-
-
-
-
-
-\section{AIS}
-Automated Information System (AIS) is a system that provides traffic monitoring, collision avoidance, aids to navigation, and more. AIS an important tool that is installed on hundreds of thousands of marine vessels worldwide, and is a mandatory requirement for vessels carrying more than a specified amount of cargo and passenger ships. While AIS has proven to be a very notable innovation in the automated maritime industry, it has a number of known exploits than range in severity. when a conversation about marine cybersecurity is initiated, AIS is a frequently noted offender [2]. 
-
-AIS vulnerability overview here:
-- these are not hard to find, lots of examples of people spoofing locations and hacking AIS...
-
-
-\section{ECDIS}
-
-Electronic Chart Display and Information System ECDIS is packaged as a software solution looking to directly replace paper nautical charts. ECDIS is installed on workstation PCs and was found to be primarily installed on machines running Windows XP. The ECDIS workstation pc acts as a point of convergence for other on-board systems and sensors. In recent years, the security of ECDIS systems have been called into question due to its inter-connectivity, leaving it vulnerable to specific cyber attacks and GPS spoofing. With the International Maritime Association (IMO) making the inclusion of ECDIS systems on board certain vessels mandatory, security and safety in the shipping and maritime industry has been of greater importance as of late. [4]. 
-
-
-
-
 \chapter{vulnerable shipboard sections}
+“Maritime Cyber Security Analysis – How to Reduce Threats?” names the following five areas susceptible to cyber attacks: Navigation Bridge, Power Management Systems, Engine Room, Cargo Handling Equipment, and Administrative and Communicational Systems[1].This section will include a broader culmination of known vulnerabilities in these sections on-board.
 
 \section{Navigation Bridge}
  
+
 
 
 
@@ -140,7 +125,7 @@ Transas uses and optional PCI express 4xRS232 serial adaptor card that adds 4 se
 
 buying the NMEA 0183 standard is a little expensive, however much of it has been reverse engineered and is available for free online. This could be used in simple proof of concept tests.
 
-\chapter{references}
+\chapter{References}
 put em here!
 
 Mraković, I., \& Vojinović, R. (2019). Maritime cyber security analysis – How to reduce threats? Transactions on Maritime Science, 8(1), 132–139. https://doi.org/10.7225/toms.v08.n01.013 [1]
